packages/astro/e2e/fixtures/errors/src/pages/js-syntax-error.astro
---
const Error = await import( '../components/JSSyntaxError.js');
---
<h1>{Error()}</h1>
